--- a/srm_reflective_piece.html
+++ b/srm_reflective_piece.html
@@ -153,7 +153,7 @@
                         Smith, L., Anderson, B., & Young, C. (2020). Prioritizing Asset Vulnerability: Towards a More Secure Enterprise. Journal of Cybersecurity and Digital Forensics, 11(1), 22-31.<br>
                         Elder, S., Rahman, M., Fringer, G., Kapoor, K., & Williams, L. (2024). A Survey on Software Vulnerability Exploitability Assessment. ACM Comput. Surv., 56(8), Article 205, 1-41.<br>
                         Barafort, B., Mesquida, A.L., Mas, A., & Walker, R. (2018). Integrating risk management in IT settings from ISO standards and management systems perspectives. Computers & Security, 77, 124-138.<br>
-                        Kirvan, P. (2021). Understanding cybersecurity frameworks. TechTarget. Available at: [link to blog].
+                        Kirvan, P. (2021). Understanding cybersecurity frameworks. TechTarget.
                     </p>
                 </div>
             </section>
