Research_module added in index

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 							<li><a href="launching_into_cyber_security.html">Launching into Cyber Security</a></li>
 							<li><a href="security_and_risk_management.html">Security and Risk Management</a></li>
 							<li><a href="network_security.html">Network Security</a></li>
+							<li><a href="research_methods.html">Research Methods and Professional Practice</a></li>
 						</ul>
 					</nav>
 
@@ -87,6 +88,15 @@
 									<header class="major">
 										<h3><a href="network_security.html" class="link">Network Security</a></h3>
 										<p>Network security, including security management, protection issues, and strategies</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="research_methods.html" class="link">Research Methods and Professional Practice</a></h3>
+										<p>Research methodologies, ethics, and professional practices in cybersecurity</p>
 									</header>
 								</article>
 							</section>
